// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu matches snapshots 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="sc-bczRLJ fKigdf"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-1"
    tabindex="0"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu matches snapshots 2`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="sc-bczRLJ lgmwux"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-4"
    tabindex="0"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;
